--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -13,7 +12,7 @@
       li;list item
         -->
 
-        
+
       <nav>
         <ul>
           <li>
@@ -28,31 +27,31 @@
             </li>
         </ul>
       </nav>
-      <img src="header.png"　width="400" height="130" alt="ヘッター画像">
+      <img src="img/header.png"　width="400" height="130" alt="ヘッター画像">
     </header>
     <br>
 
 <section>
-  <img src="taro.png" width=140 height="140" alt="太郎のアイコン">
+  <img src="img/taro.png" width=140 height="140" alt="太郎のアイコン">
   <h1>浅見隆太</h1>
   <p>UI/UXデザイナー見習いです</p>
 
 <section>
-  <img src="work1.png" width="400" height="260" alt="勇者ゲーム">
+  <img src="img/work1.png" width="400" height="260" alt="勇者ゲーム">
   <h1>勇者ゲーム</h1>
   <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです
     楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
 </section>
 
 <section>
-  <img src="work2.png" width="400" height="260" alt="宝探しゲーム">
+  <img src="img/work2.png" width="400" height="260" alt="宝探しゲーム">
   <h1>宝探しゲーム</h1>
   <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです
     楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
 </section>
 
 <section>
-  <img src="work3.png" width="400" height="260" alt="神経衰弱">
+  <img src="img/work3.png" width="400" height="260" alt="神経衰弱">
   <h1>神経衰弱</h1>
   <p>楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです
     楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。楽しいアプリです。</p>
@@ -63,17 +62,17 @@
   <ul>
     <li>
       <a href="mailto:asami.physics@gmail.com" target="blank">
-        <img src="mail.png" width="20" height="20" alt="メール送信">
+        <img src="img/mail.png" width="20" height="20" alt="メール送信">
       </a>
     </li>
     <li>
       <a href="https://dotinstall.com" target="blank">
-        <img src="blog.png" width="20" height="20" alt="ブログサイトへ">
+        <img src="img/blog.png" width="20" height="20" alt="ブログサイトへ">
       </a>
     </li>
     <li>
       <a href="https://dotinstall.com" target="brank">
-      <img src="photos.png" width="20" height="20" alt="写真サイトへ">
+      <img src="img/photos.png" width="20" height="20" alt="写真サイトへ">
     </a>
     </li>
   </ul>
