--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </li>
         </ul>
       </nav>
-      <img src="img/header.png"　width="400" height="130" alt="ヘッター画像">
+      <img src="./img/header.png"　width="400" height="130" alt="ヘッター画像">
     </header>
     <br>
 
